Project clean-up & refactoring #13